--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,10 @@
 [DEFAULT]
 debug = no
 [path]
-src_path = D:\test\script\3DMark_CloudGate-orgSize-FixFPS0.5-GT1\vector\
-tmp_path = D:\test\script\3DMark_CloudGate-orgSize-FixFPS0.5-GT1\output\
-target_path = D:\test\script\3DMark_CloudGate-orgSize-FixFPS0.5-GT1\test-script\
+src_path = D:\fa\FullLogScript-FrameSimplifier\vector\
 
 [frame_index]
-# no workable
-start_draw_index= 1014
-scene_begins_index= 53
-save_start_index= 53
-save_end_index = 56
+# workable
+scene_begins_index= 49
+save_start_index= 49
+n=3
